add create network

--- a/create_docker_containers_stack_elkf.yaml
+++ b/create_docker_containers_stack_elkf.yaml
@@ -3,6 +3,7 @@
   connection: local
   become: yes
   roles:
+    - create_docker_network
     - create_elasticsearch_container
     - create_logstash_container
     - create_kibana_container
