--- a/roles/create_filebeat_container/tasks/main.yaml
+++ b/roles/create_filebeat_container/tasks/main.yaml
@@ -10,3 +10,8 @@
     log_driver: json-file
     networks:
       - name: elastic
+    volumes:
+      - ./filebeat_dir/filebeat.docker.yaml:/usr/share/filebeat/filebeat.yml:ro
+      - /var/lib/docker/containers:/var/lib/docker/containers:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      
