--- a/filebeat_dir/filebeat.docker.yaml
+++ b/filebeat_dir/filebeat.docker.yaml
@@ -41,9 +41,9 @@ processors:
 #      
 - add_host_metadata: ~    
 
-#setup.kibana:
-#   host: "kibana-01:5601"   
-#output.elasticsearch:
-#  hosts: '${ELASTICSEARCH_HOSTS:es-node-01:9200}'
+setup.kibana:
+  host: "kibana770:5601"   
+output.elasticsearch:
+  hosts: 'elasticsearch770:9200'
 output.logstash:
    hosts: ["logstash-01:5400"] 
