--- a/filebeat_dir/filebeat.docker.yaml
+++ b/filebeat_dir/filebeat.docker.yaml
@@ -1,49 +1,16 @@
-logging.level: debug
-logging.to_files: true
-logging.files:
-  path: /var/log/filebeat
-  name: filebeat
-  keepfiles: 7
-  permissions: 0600
-  
-filebeat.config:
-  modules:
-    path: ${path.config}/modules.d/*.yml
-    reload.enabled: false
-
+filebeat.inputs:
+- type: log
+  paths:
+    - "./test1.log"
 
 filebeat.autodiscover:
   providers:
     - type: docker
-      templates:
-      - condition:
-            equals:
-              docker.container.image: febbweiss/java-log-generator:latest
-        config:
-          - type: container
-            multiline.type: pattern
-            multiline.pattern: '^[[:space:]]+(at|\.{3})[[:space:]]+\b|^java.lang.RuntimeException:'
-            multiline.negate: false
-            multiline.match: after
-            paths:
-              - /var/lib/docker/containers/${data.docker.container.id}/*.log
-            encoding: utf-8
+      hints.enabled: true
 
 
-processors:
-# The following example enriches each event with the machine's local time zone
-# offset from UTC.
-#      
-- add_locale:
-      format: abbreviation
-#
-# The following example enriches each event with host metadata.
-#      
-- add_host_metadata: ~    
+output.logstash:
+  hosts: ["logstash770:5044"]
 
-setup.kibana:
-  host: "kibana770:5601"   
 output.elasticsearch:
   hosts: 'elasticsearch770:9200'
-output.logstash:
-   hosts: ["logstash-01:5400"] 
