--- a/filebeat_dir_for_elasticsearch/filebeat.docker.yaml
+++ b/filebeat_dir_for_elasticsearch/filebeat.docker.yaml
@@ -8,9 +8,8 @@ filebeat.autodiscover:
     - type: docker
       hints.enabled: true
 
-
-output.logstash:
-  hosts: ["logstash770:5044"]
+# output.logstash:
+#   hosts: ["logstash770:5044"]
 
 output.elasticsearch:
   hosts: 'elasticsearch770:9200'
