--- a/group_vars/all/main.yml
+++ b/group_vars/all/main.yml
@@ -1,5 +1,6 @@
 ---
 docker_container_name_elasticsearch: elasticsearch770
-docker_container_name_filebeat: filebeat770
+docker_container_name_filebeat_for_elasticsearch: filebeat_elasticsearch770
+docker_container_name_filebeat_for_logstash: filebeat_logstash770
 docker_container_name_logstash: logstash770
 docker_container_name_kibana: kibana770
