--- a/filebeat_dir_to_file/filebeat.docker.yaml
+++ b/filebeat_dir_to_file/filebeat.docker.yaml
@@ -11,5 +11,5 @@ filebeat.autodiscover:
 # output.logstash:
 #   hosts: ["logstash770:5044"]
 
-output.elasticsearch:
-  hosts: 'elasticsearch770:9200'
+output.file:
+  path: '/usr/share/filebeat/'
