--- a/roles/create_filebeat_container_to_file/tasks/main.yaml
+++ b/roles/create_filebeat_container_to_file/tasks/main.yaml
@@ -15,4 +15,5 @@
       - ./filebeat_dir_to_file/filebeat.docker.yaml:/usr/share/filebeat/filebeat.yml:ro
       - /var/lib/docker/containers:/var/lib/docker/containers:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ./logs_file:/usr/share/filebeat/logs
     restart: true
