--- a/filebeat_dir_to_file/filebeat.docker.yaml
+++ b/filebeat_dir_to_file/filebeat.docker.yaml
@@ -1,15 +1,8 @@
 filebeat.inputs:
 - type: log
   paths:
-    - "./test1.log"
+    - "/usr/share/filebeat/test.log"
 
-filebeat.autodiscover:
-  providers:
-    - type: docker
-      hints.enabled: true
-
-# output.logstash:
-#   hosts: ["logstash770:5044"]
 
 output.file:
   path: '/usr/share/filebeat/logs'
