--- a/roles/create_filebeat_container_to_logstash/tasks/main.yaml
+++ b/roles/create_filebeat_container_to_logstash/tasks/main.yaml
@@ -12,6 +12,7 @@
       - name: elastic
     user: root
     volumes:
+      - ./test.log:/usr/share/filebeat/test.log:ro
       - ./filebeat_dir_to_logstash/filebeat.docker.yaml:/usr/share/filebeat/filebeat.yml:ro
       - /var/lib/docker/containers:/var/lib/docker/containers:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
