--- a/roles/create_filebeat_container/tasks/main.yaml
+++ b/roles/create_filebeat_container/tasks/main.yaml
@@ -1,4 +1,8 @@
 ---
+- name: Set filebeat container name to logstash
+  set_fact:
+    var_filebeat_container_name: "{{ docker_container_name_filebeat_to_logstash }}"
+
 - name: filebeat.docker.yaml to logstash
   ansible.builtin.template:
     src: filebeat.docker.yaml.j2
@@ -6,9 +10,6 @@
     owner: root
     group: root
     mode: 0644
-  vars:
-    my_var: "filebeat_dir_to_logstash"
-
 
 - name: Create an filebeat:7.7.0 container to logstash
   community.docker.docker_container:
@@ -29,7 +30,9 @@
       - /var/run/docker.sock:/var/run/docker.sock:ro
     restart: true
 
-
+- name: Set filebeat container name to file
+  set_fact:
+    var_filebeat_container_name: "{{ docker_container_name_filebeat_to_file }}"
 
 - name: filebeat.docker.yaml to file  
   template:
@@ -38,8 +41,6 @@
     owner: root
     group: root
     mode: 0644
-  vars:
-    my_var: "filebeat_dir_to_file"
 
 - name: Create an filebeat:7.7.0 container to file 
   community.docker.docker_container:
