--- a/roles/create_filebeat_container/tasks/main.yaml
+++ b/roles/create_filebeat_container/tasks/main.yaml
@@ -1,12 +1,16 @@
 ---
 - name: Set filebeat container name to logstash
   set_fact:
-    var_filebeat_container_name: "{{ docker_container_name_filebeat_to_logstash }}"
+    var_filebeat_container_name: filebeat_logstash770
 
+- name: Print return information from the previous task
+  ansible.builtin.debug:
+    var: var_filebeat_container_name
+    
 - name: filebeat.docker.yaml to logstash
-  ansible.builtin.template:
+  template:
     src: filebeat.docker.yaml.j2
-    dest: ./filebeat_dir_to_file/filebeat.docker.yaml
+    dest: ./filebeat_dir_to_logstash/filebeat.docker.yaml
     owner: root
     group: root
     mode: 0644
