--- a/roles/create_kibana_container/tasks/main.yaml
+++ b/roles/create_kibana_container/tasks/main.yaml
@@ -7,6 +7,6 @@
     ports:
       - "5601:5601"
     env:
-      ELASTICSEARCH_HOSTS: "http://{{ docker_container_name_elasticsearch }}:9200"
+      ELASTICSEARCH_HOSTS: "http://{{ docker_container_name_elasticsearch }}:{{ docker_container_elasticsearch_port }}"
     networks:
       - name: elastic
