--- a/filebeat_dir_to_file/filebeat.docker.yaml
+++ b/filebeat_dir_to_file/filebeat.docker.yaml
@@ -1,8 +1,14 @@
+filebeat.autodiscovery:
+  providers:
+    - type: docker
+      hints.enable: true
 
 filebeat.inputs:
 - type: log
   paths:
     - "/usr/share/filebeat/test.log"
-    
+
+
+
 output.file:
   path: '/usr/share/filebeat/logs'
