--- a/filebeat_dir_to_logstash/filebeat.docker.yaml
+++ b/filebeat_dir_to_logstash/filebeat.docker.yaml
@@ -3,6 +3,12 @@ filebeat.autodiscovery:
     - type: docker
       hints.enable: true
 
+filebeat.inputs:
+- type: log
+  paths:
+    - "/usr/share/filebeat/test.log"
+
+
 output.logstash:
   hosts: ["logstash770:5400"]
 
