--- a/filebeat_dir_to_logstash/filebeat.docker.yaml
+++ b/filebeat_dir_to_logstash/filebeat.docker.yaml
@@ -4,7 +4,7 @@ filebeat.autodiscover:
       templates:
         - condition:
             contains:
-              docker.container.image: "studentnv/filebeat:7.7.0"
+              docker.container.name: "filebeat_logstash770"
           config:
             - type: container
               paths:
