--- a/group_vars/all/main.yml
+++ b/group_vars/all/main.yml
@@ -6,6 +6,8 @@ docker_container_name_logstash: logstash770
 docker_container_name_kibana: kibana770
 docker_container_logstash_port: 5400
 docker_container_elasticsearch_port: 9200
+docker_network_name: elastic
+
 
 docker_image_filebeat: studentnv/filebeat:7.7.0
 docker_image_logstash: studentnv/logstash:7.7.0
