--- a/filebeat_dir_to_file/filebeat.docker.yaml
+++ b/filebeat_dir_to_file/filebeat.docker.yaml
@@ -4,7 +4,7 @@ filebeat.autodiscover:
       templates:
         - condition:
             contains:
-              docker.container.name: "filebeat_logstash770"
+              docker.container.name: filebeat_logstash770
           config:
             - type: container
               paths:
