--- a/logstash_dir/logstash.conf
+++ b/logstash_dir/logstash.conf
@@ -6,14 +6,16 @@ input
 
 }
 
-filter{
-   
+filter {
+   grok {
+      match => { "message" => "%{COMBINEDAPACHELOG}"}
+   }
 }
 
 output 
 {
-    elasticsearch { 
-         hosts => ["elasticsearch770:9200"] 
-       }
-
+    file {
+      path => /usr/share/logstash/logstash-output.log
+         codec => line { format => "custom format: %{message}"}
+   }
 }
