--- a/roles/create_logstash_container/tasks/main.yaml
+++ b/roles/create_logstash_container/tasks/main.yaml
@@ -32,3 +32,4 @@
         - ./logstash_dir/logstash.conf:/usr/share/logstash/pipeline/logstash.conf:ro
         - ./logstash_data:/usr/share/logstash/logstash_data
         - ./logstash_dir/logstash.yaml:/usr/share/logstash/config/logstash.yml:ro 
+        - ./logs/file:/usr/share/logstash/logstash-output.log:rw
