--- a/logstash_dir/logstash.conf
+++ b/logstash_dir/logstash.conf
@@ -3,15 +3,10 @@ input
    beats  {
       port=> 5400
    }
-
-}
-
-filter {
-
 }
 
 output {
-  file {
-    path => path => "/usr/share/logstash/pipeline/logstash.conf/test-%{+YYYY-MM-dd}.txt"
-  }
+   file {
+      path => "/usr/share/logstash/logstash-output.log"
+   }
 }
