4 tast done I hope

--- a/filebeat_dir_to_file/filebeat.docker.yaml
+++ b/filebeat_dir_to_file/filebeat.docker.yaml
@@ -1,19 +1,19 @@
-# filebeat.autodiscover:
-#   providers:
-#     - type: docker
-#       templates:
-#         - condition:
-#             contains:
-#               docker.container.name: filebeat_logstash770
-#           config:
-#             - type: container
-#               paths:
-#                 - /var/lib/docker/containers/${data.docker.container.id}/*.log
+filebeat.autodiscover:
+  providers:
+    - type: docker
+      templates:
+        - condition:
+            contains:
+              docker.container.name: filebeat_logstash770
+          config:
+            - type: container
+              paths:
+                - /var/lib/docker/containers/${data.docker.container.id}/*.log
 
 filebeat.inputs:
-- type: log
-  paths:
-    - "/usr/share/filebeat/test.log"
+  - type: log
+    paths:
+      - "/usr/share/filebeat/test.log"
 
 
 
