--- a/logstash_dir/logstash.conf
+++ b/logstash_dir/logstash.conf
@@ -16,7 +16,7 @@ filter {
   if [input][type] == "container" {
     mutate {
       add_tag => [ "[container][name]" ] 
-      remove_field => [ "[log][file][path]", "[container][id]", "[container][image][name]", "[container][name]" ]
+      remove_field => [ "[log][file][path]", "[prospector][type]", "[container][id]", "[container][image][name]", "[container][name]" ]
       rename => {
         "[host][name]" => "host"
         "message" => "Message"
@@ -33,7 +33,7 @@ output {
    }
    if [input][type] == "log" { 
       elasticsearch { 
-         hosts => ["elasticsearch770:9200"] 
+         hosts => ["elasticsearch:9200"] 
          index => "test-%{+YYYY.MM.dd}"
       }
    }  
