--- a/group_vars/all/main.yml
+++ b/group_vars/all/main.yml
@@ -1,15 +1,16 @@
 ---
-docker_container_name_elasticsearch: elasticsearch770
-docker_container_name_filebeat_to_file: filebeat_file770
-docker_container_name_filebeat_to_logstash: filebeat_logstash770
-docker_container_name_logstash: logstash770
-docker_container_name_kibana: kibana770
+docker_container_name_elasticsearch: elasticsearch
+docker_container_name_filebeat_to_file: filebeat_file
+docker_container_name_filebeat_to_logstash: filebeat_logstash
+docker_container_name_logstash: logstash
+docker_container_name_kibana: kibana
+
 docker_container_logstash_port: 5400
 docker_container_elasticsearch_port: 9200
 docker_network_name: elastic
 
-
-docker_image_filebeat: studentnv/filebeat:7.7.0
-docker_image_logstash: studentnv/logstash:7.7.0
-docker_image_elasticsearch: studentnv/elasticsearch:7.7.0
-docker_image_kibana: studentnv/kibana:7.7.0
+docker_image_version: 7.7.0
+docker_image_filebeat: studentnv/filebeat:{{ docker_image_version }}
+docker_image_logstash: studentnv/logstash:{{ docker_image_version }}
+docker_image_elasticsearch: studentnv/elasticsearch:{{ docker_image_version }}
+docker_image_kibana: studentnv/kibana:{{ docker_image_version }}
