--- a/roles/create_filebeat_container/tasks/main.yaml
+++ b/roles/create_filebeat_container/tasks/main.yaml
@@ -1,12 +1,12 @@
 ---
 - name: Set filebeat container name to logstash
   set_fact:
-    var_filebeat_container_name: filebeat_logstash770
+    var_filebeat_container_name: "{{ docker_container_name_filebeat_to_logstash }}"
    
 - name: filebeat.docker.yaml to logstash
   template:
     src: filebeat.docker.yaml.j2
-    dest: ./filebeat_dir_to_logstash/filebeat.docker.yaml
+    dest: ./filebeat_dir/filebeat_to_logstash.docker.yaml
     owner: root
     group: root
     mode: 0644
@@ -16,7 +16,7 @@
     name: "{{ docker_container_name_filebeat_to_logstash }}"
     image: "{{ docker_image_filebeat }}" 
     env:
-      setup.kibana.host: "kibana770:5601"
+      setup.kibana.host: "{{ docker_container_name_kibana }}:5601"
       #output.elasticsearch.hosts: "[\"elasticsearch770:9200\"]"
     output_logs: true
     log_driver: json-file
@@ -24,7 +24,7 @@
       - name: "{{ docker_network_name }}"
     user: root
     volumes:
-      - ./filebeat_dir_to_logstash/filebeat.docker.yaml:/usr/share/filebeat/filebeat.yml:ro
+      - ./filebeat_dir/filebeat_to_logstash.docker.yaml:/usr/share/filebeat/filebeat.yml:ro
       - ./test.log:/usr/share/filebeat/test.log:ro
       - /var/lib/docker/containers:/var/lib/docker/containers:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
@@ -38,7 +38,7 @@
 - name: filebeat.docker.yaml to file  
   template:
     src: filebeat.docker.yaml.j2
-    dest: ./filebeat_dir_to_file/filebeat.docker.yaml
+    dest: ./filebeat_dir/filebeat_to_file.docker.yaml
     owner: root
     group: root
     mode: 0644
@@ -56,7 +56,7 @@
       - name: "{{ docker_network_name }}"
     user: root
     volumes:
-      - ./filebeat_dir_to_file/filebeat.docker.yaml:/usr/share/filebeat/filebeat.yml:ro
+      - ./filebeat_dir/filebeat_to_file.docker.yaml:/usr/share/filebeat/filebeat.yml:ro
       - ./test.log:/usr/share/filebeat/test.log:ro
       - /var/lib/docker/containers:/var/lib/docker/containers:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
