--- a/roles/create_kibana_container/tasks/main.yaml
+++ b/roles/create_kibana_container/tasks/main.yaml
@@ -1,9 +1,8 @@
 ---
-- name: Create an kibana:7.7.0 container
+- name: Create an "{{ docker_image_kibana }}" container
   community.docker.docker_container:
     name: "{{ docker_container_name_kibana }}"
     image: "{{ docker_image_kibana }}"
-    #restart: true
     ports:
       - "5601:5601"
     env:
