--- a/container_dirs/logstash_dir/logstash.conf
+++ b/container_dirs/logstash_dir/logstash.conf
@@ -33,8 +33,8 @@ output {
    }
    if [input][type] == "log" { 
       elasticsearch { 
-         hosts => ["elasticsearch:9200"] 
-         index => "test-%{+YYYY.MM.dd}"
+        hosts => "http://elasticsearch:9200"
+        index => "test-%{+YYYY.MM.dd}"
       }
    }  
 }
