--- a/roles/create_filebeat_container/tasks/main.yaml
+++ b/roles/create_filebeat_container/tasks/main.yaml
@@ -22,7 +22,7 @@
     user: root
     volumes:
       - ./filebeat_dir/filebeat_to_logstash.docker.yaml:/usr/share/filebeat/filebeat.yml:ro
-      - ./test.log:/usr/share/filebeat/test.log:ro
+      - ./logs_file/test.log:/usr/share/filebeat/test.log:ro
       - /var/lib/docker/containers:/var/lib/docker/containers:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
     restart: true
@@ -50,11 +50,11 @@
       - name: "{{ docker_network_name }}"
     user: root
     volumes:
-      - ./filebeat_dir/filebeat_to_file.docker.yaml:/usr/share/filebeat/filebeat.yml:ro
-      - ./test.log:/usr/share/filebeat/test.log:ro
+      - ./container_dirs/filebeat_dir/filebeat_to_file.docker.yaml:/usr/share/filebeat/filebeat.yml:ro
+      - ./logs_file/test.log:/usr/share/filebeat/test.log:ro
       - /var/lib/docker/containers:/var/lib/docker/containers:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ./logs_file_filebeat:/usr/share/filebeat/logs
+      - ./logs_file/logs_file_filebeat:/usr/share/filebeat/logs
     restart: true
 
 
