add new folders

--- a/roles/create_logstash_container/tasks/main.yaml
+++ b/roles/create_logstash_container/tasks/main.yaml
@@ -2,7 +2,7 @@
 - name: logstash.conf
   template:
     src: logstash.conf.j2
-    dest: ./logstash_dir/logstash.conf
+    dest: ./container_dirs/logstash_dir/logstash.conf
     owner: root
     group: root
     mode: 0644
@@ -10,7 +10,7 @@
 - name: logstash.yaml
   template:
     src: logstash.yaml.j2
-    dest: ./logstash_dir/logstash.yaml
+    dest: ./container_dirs/logstash_dir/logstash.yaml
     owner: root
     group: root
     mode: 0644
