--- a/roles/create_filebeat_container/defaults/main.yaml
+++ b/roles/create_filebeat_container/defaults/main.yaml
@@ -1,2 +1,10 @@
 ---
 var_filebeat_container_name: ""
+
+
+
+path_with_logs_file_logstash: ./logs_file/logs_file_logstash
+path_with_filebeat_to_logstash_docker_yaml: ./container_dirs/filebeat_dir/filebeat_to_logstash.docker.yaml
+path_with_test_log: ./logs_file/test.log
+
+
