--- a/container_dirs/logstash_dir/logstash.conf
+++ b/container_dirs/logstash_dir/logstash.conf
@@ -6,22 +6,10 @@ input
 }
 
 filter {
-  if [input][type] == "log" {
-    dissect {
-      mapping => {
-        "message" => "%{Time} %{+Time} %{Priority} %{Logger} %{RandomNumber} %{RandomSymbols} %{Message}"
-      }
-    }
-  }
-  if [input][type] == "container" {
-    mutate {
-      add_tag => [ "[container][name]" ] 
-      remove_field => [ "[log][file][path]", "[prospector][type]", "[container][id]", "[container][image][name]", "[container][name]" ]
-      rename => {
-        "[host][name]" => "host"
-        "message" => "Message"
-      }
-    }
+  multiline {
+    type => "somefiletype"
+    pattern => "\\$"
+    what => "next"
   }
 }
 
