--- a/roles/create_filebeat_container/defaults/main.yaml
+++ b/roles/create_filebeat_container/defaults/main.yaml
@@ -5,4 +5,4 @@ path_with_filebeat_to_logstash_docker_yaml: ./container_dirs/filebeat_dir/filebe
 path_with_test_log: ./logs_file/test.log
 path_with_logs_file_filebeat: ./logs_file/logs_file_filebeat
 user_for_docker_container_filebeat: root
-folder_permissions: 0644
+folder_permissions_filebeat: 0644
