--- a/container_dirs/logstash_dir/logstash.conf
+++ b/container_dirs/logstash_dir/logstash.conf
@@ -26,9 +26,9 @@ filter {
 }
 
 output {
-   if [input][type] == "log" {
+   if [input][type] == "container" {
       file {
-         path => "/usr/share/logstash/logs/logstash-output.log"
+        path => "/usr/share/logstash/logs/logstash-output.log"
       }
    }
    if [input][type] == "log" { 
